# ChangeLog for net-misc/ttytter
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ttytter-1.1.09 (22 Dec 2010)

  22 Dec 2010; <daragang@gentoo.org> +ttytter-1.1.09.ebuild:
  Bump to version 1.1.9

*ttytter-1.1.02 (15 Jul 2010)

  15 Jul 2010; Anna Gabutero <amdg@lavabit.com> -ttytter-1.0.00.ebuild,
  ttytter-1.0.03.ebuild, +ttytter-1.1.02.ebuild:
  net-misc/ttytter version bump

*ttytter-1.0.03 (15 May 2010)

  15 May 2010; Anna Gabutero <amdg@lavabit.com> -ttytter-0.9.7.ebuild,
  -ttytter-0.9.9.ebuild, +ttytter-1.0.03.ebuild:
  Bump version to 1.0.3 and clean up old versions

  23 Mar 2010; Anna Gabutero <amdg@lavabit.com> ttytter-1.0.00.ebuild:
  Changes based on feedback from #gentoo-sunrise

*ttytter-1.0.00 (22 Feb 2010)

  22 Feb 2010; Anna Gabutero <amdg@lavabit.com> ttytter-0.9.9.ebuild,
  +ttytter-1.0.00.ebuild:
  Version bump to 1.0.00

  24 Nov 2009; <anna@gentoo.org> ttytter-0.9.7.ebuild, ttytter-0.9.9.ebuild,
  +metadata.xml:
  Making repoman happy

  24 Nov 2009; Anna Gabutero <amdg@lavabit.com> ttytter-0.9.9.ebuild:
  Fixing broken dependency specification

*ttytter-0.9.7 (08 Sep 2009)

  08 Sep 2009; Anna Gabutero <amdg@lavabit.com> +ttytter-0.9.7.ebuild:
  Initial commit