@@ -1,3 +1,1 @@
-DIST 1.0.03.txt 115443 RMD160 53eeb559b9cddb9bc07c6004c4da453052b8421e SHA1 29d412b05b23ab80fcb8c7bab620cc3bbe1ce001 SHA256 d41baba8b6afffa9791064b981fdf13bcf26c19befc67c8e93123ecb28b9146e
-DIST 1.1.02.txt 136179 RMD160 16ca19a62216e32657a1737c734ccbad9d2b7e90 SHA1 95375fabdf9906b454fe93482a283eebc9300dcc SHA256 3e6676650daf470efe75e2ecb4b94279aae9f330f8241af76fc44f3f3493be1b
 DIST 1.1.09.txt 150449 RMD160 789659c24453ea814c510d72c7646d42f32c5b7d SHA1 37797cc919bca8a92408a0bf8a343fee6cbc406f SHA256 4e9d50306b5c0c82090886e57653aaf4ef183ba9fcc01e80cc4e33c5657877cf
