@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Dec 2010; <daragang@gentoo.org> -ttytter-1.0.03.ebuild,
+  -ttytter-1.1.02.ebuild:
+  Removing old versions
+
 *ttytter-1.1.09 (22 Dec 2010)
 
   22 Dec 2010; <daragang@gentoo.org> +ttytter-1.1.09.ebuild:
